2012-02-22  Dana Jansens  <danakj@chromium.org>

        [chromium] Fix CCOcclusionTracker unit test assertion
        https://bugs.webkit.org/show_bug.cgi?id=79275

        Reviewed by James Robinson.

        * tests/CCOcclusionTrackerTest.cpp:
        (WebCore::TEST):

2012-02-22  Ian Vollick  <vollick@chromium.org>

        [chromium] Plumb from GraphicsLayer to the cc thread animation code
        https://bugs.webkit.org/show_bug.cgi?id=75874

        Reviewed by James Robinson.

        * WebKit.gypi:
        * public/WebSettings.h:
        * public/platform/WebLayerTreeView.h:
        (WebKit::WebLayerTreeView::Settings::Settings):
        (Settings):
        * src/WebLayerTreeView.cpp:
        (WebKit::WebLayerTreeView::Settings::operator CCSettings):
        * src/WebSettingsImpl.cpp:
        (WebKit::WebSettingsImpl::setThreadedAnimationEnabled):
        (WebKit):
        * src/WebSettingsImpl.h:
        (WebSettingsImpl):
        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::setIsAcceleratedCompositingActive):
        * tests/CCActiveAnimationTest.cpp:
        (WebCore::createActiveAnimation):
        * tests/CCAnimationTestCommon.cpp: Added.
        (WebKitTests):
        (WebKitTests::FakeFloatAnimationCurve::FakeFloatAnimationCurve):
        (WebKitTests::FakeFloatAnimationCurve::~FakeFloatAnimationCurve):
        (WebKitTests::FakeFloatAnimationCurve::clone):
        (WebKitTests::FakeTransformTransition::FakeTransformTransition):
        (WebKitTests::FakeTransformTransition::~FakeTransformTransition):
        (WebKitTests::FakeTransformTransition::getValue):
        (WebKitTests::FakeTransformTransition::clone):
        (WebKitTests::FakeFloatTransition::FakeFloatTransition):
        (WebKitTests::FakeFloatTransition::~FakeFloatTransition):
        (WebKitTests::FakeFloatTransition::getValue):
        (WebKitTests::FakeLayerAnimationControllerImplClient::FakeLayerAnimationControllerImplClient):